[project]
name = "Mehak_Transformer_LULC_XAI"
version = "0.1.0"
description = "Transformer-based land use and land cover classification with explainability using satellite imagery"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "MK"}]
dependencies = []  # use requirements.txt for pinned runtime deps

[tool.pytest.ini_options]
pythonpath = ["."]
